src/test-c/test_fail/error/func_wrong_type_arg.c
int toto(double b){
    return b;
}

int main(){
    int i;
    i=2;
    return toto(i);
}